--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -50,18 +50,18 @@
                         {
                             if (User.Claims.FirstOrDefault(x => x.Type == "Fullname") != null)
                             {
-                                <span id="welcome-user">Welcome @User.Claims.First(x => x.Type == "Fullname").Value </span>
+                                <li class="nav-item" id="welcome-user">
+                                    <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "Fullname").Value </a>
+                                </li>
                             }
                             <li class="nav-item">
                                 <form asp-page="/Account/Logout" method="post">
                                     <button id="logout-button" class="nav-link" type="submit">Logout</button>
                                 </form>
                             </li>
-                            @*</ul>*@
                         }
                         else
                         {
-                            @*<ul class="navbar-nav">*@
                             <li class="nav-item">
                                 <a class="nav-link" asp-page="/Account/Login">Login</a>
                             </li>
