--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -23,6 +23,7 @@
 
                     <!--Card content-->
                     <form class="card-body">
+                        <div asp-validation-summary="All" class="error-message"></div>
 
                         <!--Grid row-->
                         <div class="row">
@@ -33,7 +34,7 @@
                                 <!--firstName-->
                                 <div class="md-form ">
                                     <input type="text" id="firstName" class="form-control">
-                                    <label for="firstName" class="">First name</label>
+                                    <label asp-for="@Model.Input.FirstName" class="">First name</label>
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -43,54 +44,26 @@
                                 <!--lastName-->
                                 <div class="md-form">
                                     <input type="text" id="lastName" class="form-control">
-                                    <label for="lastName" class="">Last name</label>
+                                    <label asp-for="@Model.Input.LastName" class="">Last name</label>
                                 </div>
                             </div>
                             <!--Grid column-->
                         </div>
                         <!--Grid row-->
-                        <!--Username-->
-                        <div class="md-form input-group pl-0 mb-5">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1"></span>
-                            </div>
-                            <input type="text" class="form-control py-0" placeholder="Username" aria-describedby="basic-addon1">
-                        </div>
-
                         <!--email-->
                         <div class="md-form mb-5">
                             <input type="text" id="email" class="form-control" placeholder="youremail@example.com">
-                            <label for="email" class="">Email (optional)</label>
+                            <label asp-for="@Model.Input.Email" class="">Email</label>
                         </div>
 
                         <!--address-->
                         <div class="md-form mb-5">
                             <input type="text" id="address" class="form-control" placeholder="1234 Main St">
-                            <label for="address" class="">Address</label>
-                        </div>
-
-                        <!--address-2-->
-                        <div class="md-form mb-5">
-                            <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite">
-                            <label for="address-2" class="">Address 2 (optional)</label>
+                            <label asp-for="@Model.Input.Address" class="">Address</label>
                         </div>
 
                         <!--Grid row-->
                         <div class="row">
-
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-12 mb-4">
-
-                                <label for="country">Country</label>
-                                <select class="custom-select d-block w-100" id="country" required>
-                                    <option value="">Choose...</option>
-                                    <option>United States</option>
-                                </select>
-                                <div class="invalid-feedback">
-                                    Please select a valid country.
-                                </div>
-                            </div>
-                            <!--Grid column-->
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
 
@@ -107,7 +80,7 @@
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
 
-                                <label for="zip">Zip</label>
+                                <label asp-for="@Model.Input.Zip">Zip</label>
                                 <input type="text" class="form-control" id="zip" placeholder="" required>
                                 <div class="invalid-feedback">
                                     Zip code required.
